@@ -1,13 +1,14 @@
 package org.iclass.backend.service;
 
-import lombok.RequiredArgsConstructor;
-import org.iclass.backend.dto.FeelingGenreDto;
-import org.iclass.backend.entity.FeelingGenreEntity;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.iclass.backend.dto.FeelingMovieDto;
+import org.iclass.backend.entity.MovieInfoEntity;
 import org.iclass.backend.repository.FeelingGenreRepository;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
@@ -16,12 +17,21 @@ public class FeelingGenreService {
   private final FeelingGenreRepository repository;
 
   // 감정 기반 영화 추천
-  public List<FeelingGenreDto> getMoviesByFeeling(String feelingType) {
-    List<FeelingGenreEntity> entities = repository.findByFeelingType(feelingType);
-
-    // DTO 변환
-    return entities.stream()
-        .map(FeelingGenreDto::of)
-        .collect(Collectors.toList());
+  public List<FeelingMovieDto> getMoviesByFeeling(String feelingType, int count) {
+    List<MovieInfoEntity> movies = repository.findDistinctMoviesByFeeling(
+        feelingType,
+        10);
+    return movies.stream()
+        .collect(Collectors.toMap(
+            MovieInfoEntity::getMovieIdx,  // key
+            FeelingMovieDto::fromEntity,   // value
+            (a, b) -> a                    // 충돌 시 첫 번째
+        ))
+        .values().stream().toList();
   }
+
+  public List<String> getAllFeelings() {
+    return repository.findAllDistinctFeelings();
+  }
+
 }
